--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="./infinity-logo-nobg.png" alt="Logo Infiniy Beer">
+            <img src="./assets/infinity-logo-nobg.png" alt="Logo Infiniy Beer">
         </div>
         <nav>
             <ul>
