--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
                             </div>
                         </div>
                     </div>
-                    <button id="next">Next</button>
+                    <button id="next">Próximo</button>
+                    <button id="prev">Anterior</button>
                 </div>
             </div>
         </section>
