--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="logo">
             <img src="./assets/infinity-logo-nobg.png" alt="Logo Infiniy Beer">
         </div>
-        <nav>
+        <nav class="main-nav">
             <ul>
                 <li><a href="#drinks">Drinks</a><div></div></li>
                 <li><a href="#contato">Contato</a><div></div></li>
@@ -39,10 +39,15 @@
                             <div>
                                 4
                             </div>
+                            <div>
+                                5
+                            </div>
                         </div>
                     </div>
-                    <button id="next">Próximo</button>
-                    <button id="prev">Anterior</button>
+                    <div class="div-buttons">
+                        <button id="prev">Anterior</button>
+                        <button id="next">Próximo</button>
+                    </div>
                 </div>
             </div>
         </section>
