--- a/index.html
+++ b/index.html
@@ -33,26 +33,17 @@
     <main>
         <section id="menu" class="drinks">
             <div class="container">
-                <div class="events">
-                    <h1 id="eventos" >Eventos</h1>
+                <div id="eventos" class="events">
+                    <h1>Eventos</h1>
                 </div>
                 <div class="container-events">
                     <div class="scroll-slides">
                         <div id="container-slides" class="container-slides">
                             <div>
-                                1
+                                <img src="./assets/events/sxt-sb.jpeg" alt="Imagem Evento">
                             </div>
                             <div>
-                                2
-                            </div>
-                            <div>
-                                3
-                            </div>
-                            <div>
-                                4
-                            </div>
-                            <div>
-                                5
+                                <img src="./assets/events/fest.jpeg" alt="Imagem Evento">
                             </div>
                         </div>
                     </div>
@@ -73,11 +64,14 @@
         <div id="#contato" class="footer-content">
             <p>© 2023 Infinity Beer. Todos os direitos reservados.</p>
             <div class="contact-info">
-                <p>E-mail: <a href="mailto:contato@infinitybeer.com">contato@infinitybeer.com</a></p>
-                <p>Telefone: <a href="tel:(XX) XXXX-XXXX">(43)9 2121-2121</a></p>
+                <h3>Agende seu horário conosco!</h3>
+                <p>E-mail: <a target="_blank" href="mailto:infinitybeer@gmail.com">infinitybeer@gmail.com</a></p>
+                <p>Telefone: <a target="_blank" href="tel:(43)9 8408-0616">(43)9 8408-0616</a></p>
+                <p>Endereço: <a target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">Rua Pernanbuco - n° 972</a></p>
             </div>
+            <h4>@infinity_beer_ltda</h4>
             <div class="social-links">
-                <a href="https://www.instagram.com/infinity_beer_ltda" target="_blank" rel="noopener">
+                <a href="https://www.instagram.com/infty_beer" target="_blank" rel="noopener">
                     <img src="./assets/icons/instagram.svg" alt="Instagram">
                 </a>
             </div>
