--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <p>© 2023 Infinity Beer. Todos os direitos reservados.</p>
             <div class="contact-info">
                 <h3>Agende seu horário conosco!</h3>
-                <p>E-mail: <a target="_blank" href="mailto:infinitybeer@gmail.com">infinitybeer@gmail.com</a></p>
+                <p>E-mail: infinitybeer@gmail.com </p>
                 <p>Telefone: <a target="_blank" href="tel:(43)9 8408-0616">(43)9 8408-0616</a></p>
-                <p>Endereço: <a target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">Rua Pernanbuco - n° 972, Londrina</a></p>
+                <p>Endereço: <a id="end" target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">Rua Pernanbuco - n° 972, Londrina</a></p>
             </div>
             <h4>@infinity_beer_ltda</h4>
             <div class="social-links">
