--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                                 <img src="./assets/events/sxt-sb.jpeg" alt="Imagem Evento">
                             </div>
                             <div>
-                                <img src="./assets/events/fest.jpeg" alt="Imagem Evento">
+                                <img src="./assets/events/gust-fest.jpeg" alt="Imagem Evento">
+                            </div>
+                            <div>
+                                <img src="./assets/events/per-fest.jpeg" alt="Imagem Evento">
                             </div>
                         </div>
                     </div>
