--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                         </div>
                     </li>
                     <li><a onclick="handleMenu()" href="#drinks">Drinks</a><div></div></li>
-                    <li><a onclick="handleMenu()"href="#contato">Contato</a><div></div></li>
-                    <li><a onclick="handleMenu()"href="#endereço">Endereço</a><div></div></li>
-                    <li><a onclick="handleMenu()"href="#eventos">Eventos</a><div></div></li>
+                    <li><a onclick="handleMenu()" href="#contato">Contato</a><div></div></li>
+                    <li><a onclick="handleMenu()" href="#endereço">Endereço</a><div></div></li>
+                    <li><a onclick="handleMenu()" href="#eventos">Eventos</a><div></div></li>
                 </ul>
             </nav>
             <div id="menu" class="header-icon">
@@ -47,6 +47,9 @@
                             </div>
                             <div>
                                 <img src="./assets/events/per-fest.jpeg" alt="Imagem Evento">
+                            </div>
+                            <div>
+                                <img src="./assets/events/pix-fest.jpeg" alt="Imagem Evento">
                             </div>
                         </div>
                     </div>
