--- a/index.html
+++ b/index.html
@@ -69,62 +69,74 @@
                 </div>
                 <div class="container-drinks">
                     <div class="card">
-                        <div class="img">
-                            <img src="./assets/drinks/vir.png" alt="Virgin Drink">
-                        </div>
-                        <div class="name">
-                            <span>Virgin</span>
-                        </div>
-                        <div class="desc">
-                            <div class="price">
-                                <span> 500ml R$5,00 </span>
-                                <span> 750ml R$8,00 </span>
+                        <div class="container-1">
+                            <div class="img">
+                                <img src="./assets/drinks/vir.png" alt="Virgin Drink">
                             </div>
-                            <div class="ingredients">
-                                <span>Limão, leite condensado e gelo de limão</span>
+                            <div class="name">
+                                <span>Virgin</span>
                             </div>
-                            <div class="phrase">
-                                <span>"Sabor cítrico, alegria imediata"</span>
+                        </div>
+                        <div class="desc" hidden>
+                            <div class="container-desc">
+                                <div class="price">
+                                    <span> 500ml - R$5,00 </span>
+                                    <span> 750ml - R$8,00 </span>
+                                </div>
+                                <div class="ingredients">
+                                    <span>Limão, leite condensado e gelo de limão</span>
+                                </div>
+                                <div class="phrase">
+                                    <span>"Sabor cítrico, alegria imediata"</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card" >
+                        <div class="container-1">
+                            <div class="img">
+                                <img src="./assets/drinks/lov.png" alt="Virgin Drink">
+                            </div>
+                            <div class="name">
+                                <span>Love</span>
+                            </div>
+                        </div>
+                        <div class="desc" hidden>
+                            <div class="container-desc">
+                                <div class="price">
+                                    <span> 500ml - R$5,00 </span>
+                                    <span> 750ml - R$8,00 </span>
+                                </div>
+                                <div class="ingredients">
+                                    <span>Morango, leite condensado e gelo de morango</span>
+                                </div>
+                                <div class="phrase">
+                                    <span>"Drinks e delícias para compartilhar: o amor está no copo!"</span>
+                                </div>
                             </div>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="img">
-                            <img src="./assets/drinks/lov.png" alt="Virgin Drink">
-                        </div>
-                        <div class="name">
-                            <span>Love</span>
-                        </div>
-                        <div class="desc">
-                            <div class="price">
-                                <span> 500ml R$5,00 </span>
-                                <span> 750ml R$8,00 </span>
+                        <div class="container-1">
+                            <div class="img">
+                                <img src="./assets/drinks/bub.png" alt="Virgin Drink">
                             </div>
-                            <div class="ingredients">
-                                <span>Morango, leite condensado e gelo de morango</span>
-                            </div>
-                            <div class="phrase">
-                                <span>"Drinks e delícias para compartilhar: o amor está no copo!"</span>
+                            <div class="name">
+                                <span>Babaloo</span>
                             </div>
                         </div>
-                    </div>
-                    <div class="card">
-                        <div class="img">
-                            <img src="./assets/drinks/bub.png" alt="Virgin Drink">
-                        </div>
-                        <div class="name">
-                            <span>Babaloo</span>
-                        </div>
-                        <div class="desc">
-                            <div class="price">
-                                <span> 500ml R$5,00 </span>
-                                <span> 750ml R$8,00 </span>
-                            </div>
-                            <div class="ingredients">
-                                <span>Fanta uva, leite condensado, Powerade sabor blueberry</span>
-                            </div>
-                            <div class="phrase">
-                                <span>"Babaloo: o ritmo dos sabores em cada gole"</span>
+                        <div class="desc" hidden>
+                            <div class="container-desc">
+                                <div class="price">
+                                    <span> 500ml - R$5,00 </span>
+                                    <span> 750ml - R$8,00 </span>
+                                </div>
+                                <div class="ingredients">
+                                    <span>Fanta uva, leite condensado, Powerade sabor blueberry</span>
+                                </div>
+                                <div class="phrase">
+                                    <span>"Babaloo: o ritmo dos sabores em cada gole"</span>
+                                </div>
                             </div>
                         </div>
                     </div>
