finalized mobile, added about

--- a/index.html
+++ b/index.html
@@ -3,28 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/infinity-logo-nobg.png" type="png">
     <link rel="stylesheet" href="style.css">
     <title>Infinity Beer</title>
 </head>
 <body>
-    <script>
-
-    </script>
     <header>
         <div class="logo">
-            <img src="./assets/infinity-logo-nobg.png" alt="Logo Infiniy Beer">
+            <a href="./index.html"><img src="./assets/infinity-logo-nobg.png" alt="Logo Infiniy Beer"></a>
         </div>
         <div class="nav">
             <nav class="main-nav">
                 <ul id="ul">
                     <li>
                         <div class="logo-menu">
-                            <img src="./assets/infinity-logo-nobg.png" alt="Logo Infiniy Beer">
+                            <a href="./index.html"><img src="./assets/infinity-logo-nobg.png" alt="Logo Infiniy Beer"></a>
                         </div>
                     </li>
                     <li><a href="#eventos">Eventos</a></li>
                     <li><a href="#drinks">Drinks</a></li>
                     <li><a href="#contato">Contato</a></li>
+                    <li><a href="/sobre">Sobre</a></li>
                 </ul>
             </nav>
             <div id="menu" class="header-icon">
@@ -146,12 +145,14 @@
     </main>
     <footer id="#contato">
         <div class="footer-content">
-            <p>© 2023 Infinity Beer. Todos os direitos reservados.</p>
+            <div class="address">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.9678868596466!2d-51.16294069999999!3d-23.316923900000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb435ebbb1f3cb%3A0x641814369839b791!2sR.%20Pernambuco%2C%20972%20-%20Centro%2C%20Londrina%20-%20PR%2C%2086020-121!5e0!3m2!1spt-BR!2sbr!4v1698872635064!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <p>Endereço: <a id="end" target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">Rua Pernanbuco - n° 972, Londrina</a></p>
+            </div>
             <div class="contact-info">
                 <h3>Agende seu horário conosco!</h3>
                 <p>E-mail: infinitybeer@gmail.com </p>
                 <p>Telefone: <a target="_blank" href="tel:(43)9 8408-0616">(43)9 8408-0616</a></p>
-                <p>Endereço: <a id="end" target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">Rua Pernanbuco - n° 972, Londrina</a></p>
             </div>
             <h4>@infinity_beer_ltda</h4>
             <div class="social-links">
@@ -160,6 +161,7 @@
                 </a>
             </div>
         </div>
+        <p>© 2023 Infinity Beer. Todos os direitos reservados.</p>
     </footer>
     <script src="script.js" type="module"></script>
 </body>
