--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <li><a href="#eventos">Eventos</a></li>
                     <li><a href="#drinks">Drinks</a></li>
                     <li><a href="#contato">Contato</a></li>
-                    <li><a href="/sobre">Sobre</a></li>
+                    <li><a href="/sobre.html">Sobre</a></li>
                 </ul>
             </nav>
             <div id="menu" class="header-icon">
