--- a/sobre.html
+++ b/sobre.html
@@ -82,7 +82,7 @@
         </div>
         <div class="container-sobre valores">
             <h2>Valores</h2>
-            <ul>
+            <ul class="ul-valores">
                 <li>
                     <div class="sub">
                         <div class="imgs">
