new carousel, fix text

--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
                                 <img src="./assets/events/sxt-sb.jpeg" alt="Imagem Evento">
                             </div>
                             <div>
-                                <img src="./assets/events/gust-fest.jpeg" alt="Imagem Evento">
+                                <img src="./assets/events/gus.jpeg" alt="Imagem Evento">
                             </div>
                             <div>
-                                <img src="./assets/events/per-fest.jpeg" alt="Imagem Evento">
+                                <img src="./assets/events/per.jpeg" alt="Imagem Evento">
                             </div>
                             <div>
-                                <img src="./assets/events/pix-fest.jpeg" alt="Imagem Evento">
+                                <img src="./assets/events/lua.jpeg" alt="Imagem Evento">
+                            </div>
+                            <div>
+                                <img src="./assets/events/pix.jpeg" alt="Imagem Evento">
                             </div>
                         </div>
                     </div>
@@ -121,7 +124,7 @@
                                 <img src="./assets/drinks/bub.png" alt="Virgin Drink">
                             </div>
                             <div class="name">
-                                <span>Babaloo</span>
+                                <span>Bubbaloo</span>
                             </div>
                         </div>
                         <div class="desc" hidden>
@@ -134,7 +137,7 @@
                                     <span>Fanta uva, leite condensado, Powerade sabor blueberry</span>
                                 </div>
                                 <div class="phrase">
-                                    <span>"Babaloo: o ritmo dos sabores em cada gole"</span>
+                                    <span>"Bubbaloo: o ritmo dos sabores em cada gole"</span>
                                 </div>
                             </div>
                         </div>
@@ -146,6 +149,7 @@
     <footer id="#contato">
         <div class="footer-content">
             <div class="address">
+                <h1 style="margin: 1rem">Localização:</h1>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.9678868596466!2d-51.16294069999999!3d-23.316923900000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb435ebbb1f3cb%3A0x641814369839b791!2sR.%20Pernambuco%2C%20972%20-%20Centro%2C%20Londrina%20-%20PR%2C%2086020-121!5e0!3m2!1spt-BR!2sbr!4v1698872635064!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <p>Endereço: <a id="end" target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">Rua Pernanbuco - n° 972, Londrina</a></p>
             </div>
