index page finalized

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <main>
         <section id="menu" class="drinks">
             <div class="container">
-                <div id="eventos" class="events">
-                    <h1>Eventos</h1>
+                <div id="eventos" class="head-section">
+                    <h1>EVENTOS</h1>
                 </div>
                 <div class="container-events">
                     <div class="scroll-slides">
@@ -66,7 +66,7 @@
         </section>
         <section class="drinks">
             <div class="container">
-                <div id="drinks" class="events">
+                <div id="drinks" class="head-section">
                     <h1>DRINKS</h1>
                 </div>
                 <div class="container-drinks">
@@ -146,7 +146,7 @@
             </div>
         </section>
     </main>
-    <footer id="#contato">
+    <footer id="contato">
         <div class="footer-content">
             <div class="address">
                 <h1 style="margin: 1rem">Localização:</h1>
@@ -158,6 +158,14 @@
                 <p>E-mail: infinitybeer@gmail.com </p>
                 <p>Telefone: <a target="_blank" href="tel:(43)9 8408-0616">(43)9 8408-0616</a></p>
             </div>
+            <div class="insta">
+                <h4>@infinity_beer_ltda</h4>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/infty_beer" target="_blank" rel="noopener">
+                        <img src="./assets/icons/instagram.svg" alt="Instagram">
+                    </a>
+                </div>
+            </div>
             <h4>@infinity_beer_ltda</h4>
             <div class="social-links">
                 <a href="https://www.instagram.com/infty_beer" target="_blank" rel="noopener">
@@ -165,7 +173,7 @@
                 </a>
             </div>
         </div>
-        <p>© 2023 Infinity Beer. Todos os direitos reservados.</p>
+        <p class="direitos">© 2023 Infinity Beer. Todos os direitos reservados.</p>
     </footer>
     <script src="script.js" type="module"></script>
 </body>
