--- a/sobre.html
+++ b/sobre.html
@@ -136,6 +136,6 @@
             </div>
         </div>
     </footer>
-    <script src="script.js" type="module"></script>
+    <script src="scriptsobre.js" type="module"></script>
 </body>
 </html>
