--- a/index.html
+++ b/index.html
@@ -148,10 +148,48 @@
     </main>
     <footer id="contato">
         <div class="footer-content">
+            <div class="container-footer address">
+                <h2>Localização:</h2>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.9678868596466!2d-51.16294069999999!3d-23.316923900000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb435ebbb1f3cb%3A0x641814369839b791!2sR.%20Pernambuco%2C%20972%20-%20Centro%2C%20Londrina%20-%20PR%2C%2086020-121!5e0!3m2!1spt-BR!2sbr!4v1698872635064!5m2!1spt-BR!2sbr" style="border:0;" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <a id="end" target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">
+                Rua Endereço: Pernanbuco - n° 972, Londrina</a>
+            </div>
+            <div class="container-footer social-container">
+                <h2> Social </h2>
+                <a target="_blank" href="" class="social">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-whatsapp" viewBox="0 0 16 16">
+                        <path d="M13.601 2.326A7.854 7.854 0 0 0 7.994 0C3.627 0 .068 3.558.064 7.926c0 1.399.366 2.76 1.057 3.965L0 16l4.204-1.102a7.933 7.933 0 0 0 3.79.965h.004c4.368 0 7.926-3.558 7.93-7.93A7.898 7.898 0 0 0 13.6 2.326zM7.994 14.521a6.573 6.573 0 0 1-3.356-.92l-.24-.144-2.494.654.666-2.433-.156-.251a6.56 6.56 0 0 1-1.007-3.505c0-3.626 2.957-6.584 6.591-6.584a6.56 6.56 0 0 1 4.66 1.931 6.557 6.557 0 0 1 1.928 4.66c-.004 3.639-2.961 6.592-6.592 6.592zm3.615-4.934c-.197-.099-1.17-.578-1.353-.646-.182-.065-.315-.099-.445.099-.133.197-.513.646-.627.775-.114.133-.232.148-.43.05-.197-.1-.836-.308-1.592-.985-.59-.525-.985-1.175-1.103-1.372-.114-.198-.011-.304.088-.403.087-.088.197-.232.296-.346.1-.114.133-.198.198-.33.065-.134.034-.248-.015-.347-.05-.099-.445-1.076-.612-1.47-.16-.389-.323-.335-.445-.34-.114-.007-.247-.007-.38-.007a.729.729 0 0 0-.529.247c-.182.198-.691.677-.691 1.654 0 .977.71 1.916.81 2.049.098.133 1.394 2.132 3.383 2.992.47.205.84.326 1.129.418.475.152.904.129 1.246.08.38-.058 1.171-.48 1.338-.943.164-.464.164-.86.114-.943-.049-.084-.182-.133-.38-.232z"/>
+                      </svg>
+                      <p> (43)9 8408-0616 </p>
+                </a>
+                <a target="_blank" href="https://www.instagram.com/infty_beer" class="social">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
+                    <p> @infty_beer </p>
+                </a>
+                <a target="_blank" href="mailto:" class="social">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                    <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                    </svg>
+                    <p> infinitybeer@gmail.com </p>
+                </a>
+            </div>
+            <div class="container-footer citacoes">
+                <h2>A Bebida é...</h2>
+                <p>"A bebida é a alegria do homem." - Homero</p>
+                <p>"A bebida é o alimento do espírito." - William Shakespeare</p>
+                <p>"A bebida é a solução de todos os problemas." - Oscar Wilde</p>
+                <p>"A bebida é a fonte da inspiração." - Pablo Picasso</p>
+                <p>"A bebida é a chave da felicidade." - Friedrich Nietzsche</p>
+            </div>
+        </div>
+        <p class="footer-footer">
+            © 2023 Infinity Beer. Todos os direitos reservados.
+        </p>
+    </footer>
+    <!-- <footer id="contato">
+        <div class="footer-content">
             <div class="address">
-                <h1 style="margin: 1rem">Localização:</h1>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3663.9678868596466!2d-51.16294069999999!3d-23.316923900000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb435ebbb1f3cb%3A0x641814369839b791!2sR.%20Pernambuco%2C%20972%20-%20Centro%2C%20Londrina%20-%20PR%2C%2086020-121!5e0!3m2!1spt-BR!2sbr!4v1698872635064!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                <p>Endereço: <a id="end" target="_blank" href="https://www.google.com/maps/place/R.+Pernambuco,+972+-+Centro,+Londrina+-+PR,+86020-121/@-23.3169239,-51.1629407,17z/data=!3m1!4b1!4m6!3m5!1s0x94eb435ebbb1f3cb:0x641814369839b791!8m2!3d-23.3169239!4d-51.1629407!16s%2Fg%2F11cppc_1xt?entry=ttu">Rua Pernanbuco - n° 972, Londrina</a></p>
+                
             </div>
             <div class="contact-info">
                 <h3>Agende seu horário conosco!</h3>
@@ -174,7 +212,7 @@
             </div>
         </div>
         <p class="direitos">© 2023 Infinity Beer. Todos os direitos reservados.</p>
-    </footer>
+    </footer> -->
     <script src="script.js" type="module"></script>
 </body>
 </html>
